修复java8没有Base64Encoder的问题